--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,7 +8,6 @@ configfile: "config/params.yaml"
 # Get the output directory and define the structure directory
 output_dir = "results/" + config.get("outdir", "results/my_results")
 input_dir = f"{output_dir}/structs"
-
 identifiers = config.get("identifiers", "identifiers.txt")
 
 
@@ -24,21 +23,16 @@ rule all:
         f"{output_dir}/done.txt",
         # get all sequences in a single file
         f"{output_dir}/alignment/processed_sequences.fa",
-        
+        #f"{output_dir}/alignment/trimal/alignment_{alphabet}_trimmed.fa",
+
         # fastME based on IMD
-        f"{output_dir}/fastME/ref_IMD.txt",
-        f"{output_dir}/fastME/FastME_IMD.nwk"
+        #f"{output_dir}/fastME/ref_IMD.txt",
+        #f"{output_dir}/fastME/FastME_IMD_final.nwk",
         
         
-        # FoldTree Results
-        #f"{output_dir}/foldtree/foldtree_3di_FT.nwk",
-        # f"{output_dir}/foldtree/foldtree_py/foldtree_3di_FTPY.nwk"
-
         # IQ-TREE results for each alphabet and model
-
-        #f"{output_dir}/iqtree/aa/ML.nwk",
-        #expand(f"{output_dir}/iqtree/3di/{{combs_3di}}.iqtree", combs_3di=config["three_di_models"]),  # 3di and AF for 3di alphabet
+        expand(f"{output_dir}/iqtree/3di/{{combs_3di}}.iqtree", combs_3di=config["three_di_models"]),  # 3di and AF for 3di alphabet
 
         # Partitioned IQ-TREE results combining LG with both 3di and AF
-        #expand(f"{output_dir}/iqtree_partitioned/ML_{{combs_3di}}.nwk", combs_3di=config["three_di_models"])
+        expand(f"{output_dir}/iqtree_partitioned/ML_{{combs_3di}}.iqtree", combs_3di=config["three_di_models"])
  
