--- a/config/params.yaml
+++ b/config/params.yaml
@@ -27,6 +27,12 @@ three_di_models: ["AF"]
 # min lddt to mask residues for the seed stage in foldmason
 min_lddt: 50
 
+# Some stuff i need for the download pipelien that i adapted from foldtree
+eval_both: 1e-3
+coverage: 50
+clean_folder: False
+custom_structs: False
+
 # substitution matrices
 subst_matrix: 
   aln: 'data/subst_matrixes/mat3di.out'
